@@ -24,11 +24,24 @@
 
 #if USE_PYTHON
 
+/* Python.h definse HAVE_FSTAT so save and redefine here */
+#if HAVE_FSTAT
+#define _HAVE_FSTAT 1
+#else
+#define _HAVE_FSTAT 0
+#endif
+#undef HAVE_FSTAT
+#include <Python.h>
+#undef HAVE_FSTAT
+#define HAVE_FSTAT _HAVE_FSTAT
+
 extern void
 PythonInitialise( const char *arg0, const char *szDir );
 
 extern void
 PythonShutdown();
+
+extern PyObject *PythonMatchChecksum( PyObject* self, PyObject *args );
 
 #endif /* USE_PYTHON */
 
